tirado a barra na url da imagem seção

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="shortcut icon"
-      href="./src/images/favicon.ico"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="./src/images/favicon.ico"
+      type="image/x-icon"/>
+      <link rel="stylesheet" href="./src/css/responsive.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -27,11 +25,13 @@
     />
   </head>
   <body>
+    
     <header class="cabecalho">
       <a href="index.html" class="logo">
         <h1>Code<br>Café</h1>
       </a>
 
+    
       <nav>
         <ul>
           <li><a href="#quem-somos">Quem Somos</a></li>
@@ -48,10 +48,13 @@
 
       <section class="secao-com-texto" id="quem-somos">
         <header>
-          <img src="/src/images/logo-secoes.png" />
+          <img src="src/images/logo-secoes.png" />
           <h2>QUEM SOMOS</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicin elit. Placeat debitis eos ex accusantium quidem quam quasi, provident rerum et incidunt laboriosam molestias porro culpa, exercitationem, ullam reiciendis error aut. Quaerat.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur,
+            excepturi quod voluptatibus repellat at natus sequi error vero nisi
+            ipsa! Laudantium obcaecati impedit nobis officiis reprehenderit
+            saepe vel nostrum at.
           </p>
         </header>
       </section>
@@ -65,7 +68,7 @@
 
       <section class="secao-com-texto onde-estamos" id="onde-estamos">
         <header>
-          <img src="/src/images/logo-secoes.png" />
+          <img src="src/images/logo-secoes.png" />
           <h2>ONDE ESTAMOS</h2>
           <p>Avenida Brigadeiro Faria Lima, 444 São Paulo</p>
         </header>
