--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Code Café</title>
 
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="./src/images/favicon.ico"
-      type="image/x-icon"/>
-      <link rel="stylesheet" href="./src/css/responsive.css">
+    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="./src/images/favicon.ico"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="./src/css/responsive.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -25,13 +28,11 @@
     />
   </head>
   <body>
-    
     <header class="cabecalho">
       <a href="index.html" class="logo">
-        <h1>Code<br>Café</h1>
+        <h1>Code<br />Café</h1>
       </a>
 
-    
       <nav>
         <ul>
           <li><a href="#quem-somos">Quem Somos</a></li>
@@ -92,20 +93,18 @@
       <a href="index.html" class="logo">
         <img src="./src/images/logo.jpg" />
       </a>
+      <ul>
+        <li><a href="#quem-somos">Quem Somos</a></li>
+        <li><a href="#onde-estamos">Onde estamos</a></li>
+        <li><a href="#contato">Contato</a></li>
+      </ul>
+
       <div class="conteudo-de-baixo">
-        <div class="copyright">© 2022 Code Café</div>
-
-        <ul>
-          <li><a href="#quem-somos">Quem Somos</a></li>
-          <li><a href="#onde-estamos">Onde estamos</a></li>
-          <li><a href="#contato">Contato</a></li>
-        </ul>
-
         <div class="redes-sociais">
           <a href="#facebook" target="_blank">
             <img
               class="facebook"
-              title="Logo facebook"
+              title="Logo Facebook"
               alt="Logo Facebook"
               src="./src/images/face.png"
           /></a>
@@ -118,6 +117,7 @@
               src="./src/images/insta.png"
           /></a>
         </div>
+        <div class="copyright">© 2022 Code Café</div>
       </div>
     </footer>
   </body>
